--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           >Buy Now | 13.99</a
         >
       </p>
+      <p class="version">Version 1.0.5</p>
+      <img src="./screenshot.png" class="screenshot" />
     </header>
     <main>
       <h2>Features</h2>
@@ -38,6 +40,7 @@
         <li>Full Animated File Type Support</li>
         <li>No Subscriptions</li>
       </ul>
+      <div class="divider" />
       <h2>Options and Settings</h2>
       <p>
         Lowkey Image Viewer supports many customization options so you can set
@@ -60,6 +63,8 @@
           Full Screen and Always on Top
         </li>
       </ul>
+      <div class="divider" />
+
       <h2>How to Use Lowkey Image Viewer</h2>
       <p>
         Lowkey Image Viewer is designed to be as simple as possible, but it does
@@ -67,21 +72,50 @@
         experience.
       </p>
       <h3>Registration</h3>
+      <img src="./screenshot.png" class="screenshot" />
       <h3>Opening your First Image</h3>
-      <h3>Choosing a Control Mode</h3>
-      <h3>Make Lowkey Image Viewer your default viewer</h3>
-      <h3>View all images in current directory</h3>
-      <h3>Include files in subfolders with Recursive Mode</h3>
-      <h3>Jump into subfolder while in recursive mode</h3>
-      <h3>Changing the active directory</h3>
-      <h3>Change image scale</h3>
-      <h3>Change sort order</h3>
-      <h3>Change file type filter</h3>
-      <h3>Save Settings Defaults</h3>
-      <h3>Control video files</h3>
-      <h3>Shuffle and Random Image</h3>
-      <h3>Updating Lowkey Image Viewer</h3>
+      <img src="./screenshot.png" class="screenshot" />
 
+      <h3>Choosing a Control Mode</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Make Lowkey Image Viewer your default viewer</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>View all images in current directory</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Include files in subfolders with Recursive Mode</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Jump into subfolder while in recursive mode</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Changing the active directory</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Change image scale</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Change sort order</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Change file type filter</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Save settings for next time</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Control video files</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Shuffle and Random Image</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <h3>Updating Lowkey Image Viewer</h3>
+      <img src="./screenshot.png" class="screenshot" />
+
+      <div class="divider" />
       <h2>Help and Support</h2>
       <p>
         Still have a problem not answered here? Send me an email and I'm happy
@@ -106,6 +140,8 @@
           >
         </li>
       </ul>
+      <div class="divider" />
+
       <h2>Credits Thanks and Attribution</h2>
       <p>
         The following projects were used in the creation of Low Key Image
