videos and final touches

--- a/index.html
+++ b/index.html
@@ -13,15 +13,24 @@
       <p class="subTitle">
         An image viewer for viewing images really well and nothing more.
       </p>
-      <p class="info">Works on Windows and macOS</p>
-      <p class="info">Supports .jpg, .png, .gif, .mp4, and .webm files.</p>
+      <p class="info">
+        Works on <span class="os windows">Windows 10</span> and
+        <span class="os mac">macOs</span>
+      </p>
+      <p class="info">
+        Supports <span class="fileType jpg">.jpg</span>,
+        <span class="fileType png">.png</span>,
+        <span class="fileType gif">.gif</span>,
+        <span class="fileType mp4">.mp4</span>, and
+        <span class="fileType webm">.webm</span> files.
+      </p>
       <p class="buttonArea">
         <a href="https://gumroad.com/l/UVvUM" class="buyButton"
           >Buy Now | 13.99</a
         >
       </p>
       <p class="version">Version 1.0.5</p>
-      <img src="./screenshot.png" class="screenshot" />
+      <video src="./screencapture.mp4" loop autoplay muted></video>
     </header>
     <main>
       <h2>Features</h2>
@@ -40,6 +49,10 @@
         <li>Full Animated File Type Support</li>
         <li>No Subscriptions</li>
       </ul>
+      <p>
+        Lowkey Image Viewer also does not create any aditional photo database,
+        or connect to the internet unless you explicitly turn on auto-updates.
+      </p>
       <div class="divider" />
       <h2>Options and Settings</h2>
       <p>
@@ -63,6 +76,12 @@
           Full Screen and Always on Top
         </li>
       </ul>
+      <p>
+        See the help selection below for more information on changing settings.
+        Is there a setting you'd like but don't see? Send me a
+        <a href="mailto:features@lowkeyviewer.com">feature request</a>
+        and I will add it if it makes sense.
+      </p>
       <div class="divider" />
 
       <h2>How to Use Lowkey Image Viewer</h2>
@@ -72,48 +91,209 @@
         experience.
       </p>
       <h3>Registration</h3>
-      <img src="./screenshot.png" class="screenshot" />
-      <h3>Opening your First Image</h3>
-      <img src="./screenshot.png" class="screenshot" />
-
+      <p>
+        You will need to enter a registration key to use this product. You can
+        get one on <a href="https://gumroad.com/l/UVvUM">Gumroad</a>. Copy and
+        paste in to the about section then click Register. You can now close the
+        About screen.
+      </p>
+      <video
+        src="./help_videos//registration.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
+      <h3>Opening an Image or Video</h3>
+      <p>
+        You can open an image by using your native file browser. Just select a
+        supported image type and open it using LowKey Image Viewer, which should
+        be added to the list of available programs automatically.
+      </p>
+      <video src="./help_videos//open.mp4" loop autoplay muted controls></video>
+      <h3>Window Controls</h3>
+      <p>
+        To close the program, or enter and exit fullscreen mode use the colored
+        controls in the settings panel. Red to close, yellow for windowed mode,
+        green for fullscreen. By default Lowkey Image Viewer opens in fullscreen
+        mode.
+      </p>
+      <video
+        src="./help_videos//window-controls.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
       <h3>Choosing a Control Mode</h3>
-      <img src="./screenshot.png" class="screenshot" />
-
-      <h3>Make Lowkey Image Viewer your default viewer</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <p>
+        The control mode determines the method used to pan photos, and to flip
+        through folders in the directory.
+      </p>
+      <h4>
+        Mouse and ScrollWheel Mode
+      </h4>
+      <p>
+        You flip through photos using the scroll wheel, and you pan photos by
+        clicking, holding, and dragging.
+      </p>
+      <h4>
+        Trackpad Mode
+      </h4>
+      <p>
+        You flip through photos by clicking to the right side of the image or on
+        the left side to flip backwards, and you pan photos by scrolling with
+        your trackpad or Magic Mouse.
+      </p>
+      <video
+        src="./help_videos//control_mode.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
 
       <h3>View all images in current directory</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <p>
+        Move your mouse to the bottom right corner of the screen. A folder icon
+        will appear, click on it to view all images in the current directory.
+      </p>
+      <video src="./help_videos/list.mp4" loop autoplay muted controls></video>
 
       <h3>Include files in subfolders with Recursive Mode</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <p>
+        Open the settings panel by moving your mouse to the bottom left corner
+        of the screen. Click the settings gear icon to open settings. Click on
+        the recursive option to toggle the inclusion of images in
+        subdirectories. Recursive mode may take a while to load if there are
+        over 50,000 images.
+      </p>
+      <video
+        src="./help_videos/recursive.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
 
       <h3>Jump into subfolder while in recursive mode</h3>
-      <img src="./screenshot.png" class="screenshot" />
-
+      <p>
+        While in Detail View. Right click on an image while in Recursive mode
+        and if it is not in the root directory, your active directory will be
+        set to the directory containing the image.
+      </p>
+      <video
+        src="./help_videos/folder-dive.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
       <h3>Changing the active directory</h3>
-      <img src="./screenshot.png" class="screenshot" />
 
-      <h3>Change image scale</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <p>
+        Open the settings panel by moving your mouse to the bottom left corner
+        of the screen. Click the settings gear icon to open settings. Click on
+        the current folder name to display a file browser, change your path, and
+        select new path.
+      </p>
+      <video
+        src="./help_videos/change-directory.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
+
+      <h3>Change the image scale</h3>
+      <p>
+        Open the settings panel by moving your mouse to the bottom left corner
+        of the screen. Click the settings gear icon to open settings. Click on
+        the current image scale to change image scaling method.
+      </p>
+      <p class="hotKey">Hotkey: C</p>
+      <video
+        src="./help_videos/scaling.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
 
       <h3>Change sort order</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <p>
+        Open the settings panel by moving your mouse to the bottom left corner
+        of the screen. Click the settings gear icon to open settings. Click on
+        the current sort order to toggle sort method. Currently only supports
+        last modified date, and alphabetical order.
+      </p>
+      <p class="hotKey">Hotkey: S</p>
+      <video src="./help_videos/sort.mp4" loop autoplay muted controls></video>
 
       <h3>Change file type filter</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <p>
+        Open the settings panel by moving your mouse to the bottom left corner
+        of the screen. Click the settings gear icon to open settings. Click on
+        the current sort order to flip through the file type filtering method.
+        Currently supports (All Files, Static Files, Gif Files, Video Files, and
+        Motion Files).
+      </p>
+      <p class="hotKey">
+        Hotkey: A(For All) S(For Static Only) G(For Gif) V(For Videos) M(For
+        Motion)
+      </p>
+      <video
+        src="./help_videos/filters.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
 
       <h3>Save settings for next time</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <video
+        src="./help_videos/save-settings.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
 
       <h3>Control video files</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <video
+        src="./help_videos/video-controls.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
 
       <h3>Shuffle and Random Image</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <p>
+        Press the X key to shuffle images. In detail mode you will be show a
+        random image. In list view the list will not shuffle until you scroll
+        for the first time after pushing X button.
+      </p>
+      <video
+        src="./help_videos/shuffle.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
 
       <h3>Updating Lowkey Image Viewer</h3>
-      <img src="./screenshot.png" class="screenshot" />
+      <p>
+        You can update the software from the About menu located in the settings
+        panel.
+      </p>
+      <video
+        src="./help_videos/update.mp4"
+        loop
+        autoplay
+        muted
+        controls
+      ></video>
 
       <div class="divider" />
       <h2>Help and Support</h2>
@@ -152,8 +332,12 @@
         CC-BY4.0
       </li>
       <li>
-        <a href="https://unsplash.com/">Unsplash</a> used for sample images in
-        demo videos.
+        <a href="https://unsplash.com/">Unsplash</a> used for samples in demo
+        videos.
+      </li>
+      <li>
+        <a href="https://unsplash.com/">Beeple</a> used for samples in demo and
+        tutorial videos.
       </li>
     </main>
   </body>
