--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <title>Lowkey Image Viewer</title>
   </head>
   <body>
+    <div class="saleBanner">Use code 'presidents' for 50% off.</div>
     <header>
       <img src="logo.png" class="logo" />
       <h1>Lowkey Image Viewer</h1>
@@ -52,7 +53,7 @@
           href="https://gum.co/UVvUM?wanted=true"
           target="_blank"
           data-gumroad-single-product="true"
-          >Buy Now | 13.99</a
+          >Buy Now | $13.96</a
         >
       </p>
       <p class="version">Version 1.0.5</p>
@@ -308,7 +309,7 @@
         controls
       ></video>
 
-      <h3>Updating Lowkey Image Viewer</h3>
+      <!-- <h3>Updating Lowkey Image Viewer</h3>
       <p>
         You can update the software from the About menu located in the settings
         panel.
@@ -319,7 +320,7 @@
         autoplay
         muted
         controls
-      ></video>
+      ></video> -->
 
       <div class="divider" />
       <h2 id="support">Help and Support</h2>
