--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           >Download | Free</a
         >
       </p>
-      <p class="version">Version 1.0.5</p>
+      <p class="version">Version 1.0.6</p>
       <p class="license"><a href="https://github.com/SteveCastle/loki/blob/master/LICENSE"><img src="mit.svg"/></a></p>
       <p class="github"><a href="https://github.com/SteveCastle/loki"><img src="GitHub-Mark-Light-32px.png"/></a></p>
       <video src="./screencapture.mp4" loop autoplay muted controls></video>
@@ -385,10 +385,10 @@
       const el = document.getElementById('downloadButton')
       console.log('running thing', el);
       if(window.navigator.platform === 'MacIntel') {
-        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.0.5/LowKey.Image.Viewer-1.0.5.dmg')
+        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.0.6/LowKey.Image.Viewer-1.0.6.dmg')
         el.innerHTML  = "Download | Free for Mac"
       } else {
-        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.0.5/LowKey.Image.Viewer.Setup.1.0.5.exe')
+        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.0.6/LowKey.Image.Viewer.Setup.1.0.6.zip')
         el.innerHTML  = "Download | Free for Windows"
       }
 
