emphasize webm feature

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./index.css" />
-    <title>Lowkey Image Viewer</title>
+    <title>Lowkey Image and WebM Viewer</title>
         <!-- Global site tag (gtag.js) - Google Ads: 666016632 -->
         <script
         async
@@ -58,9 +58,9 @@
   <body>
     <header>
       <img src="logo.png" class="logo" />
-      <h1>Lowkey Image Viewer</h1>
+      <h1>Lowkey Image and WebM Viewer</h1>
       <p class="subTitle">
-        An image viewer for viewing images really well and nothing more.
+        A free open source image viewer for viewing images really well and nothing more.
       </p>
       <p class="info">
         Works on <span class="os windows">Windows 10</span> and
@@ -340,7 +340,7 @@
       <h2 id="support">Support and Satisfaction Guarantee</h2>
       <p>
         Still have a problem not answered here? Send me an email and I'm happy
-        to help! There is also a seperate email for feature requests. All development of Lowkey Image Viewer is driven by feature
+        to help! There is also a separate email for feature requests. All development of Lowkey Image Viewer is driven by feature
         requests from the community and updates are free forever.
       </p>
       <ul>
