--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <img src="logo.png" class="logo" />
       <h1>Lowkey Image and WebM Viewer</h1>
       <p class="subTitle">
-        A free open source image viewer for viewing images really well and nothing more.
+        A free open source image viewer for viewing images and videos really well and nothing more.
       </p>
       <p class="info">
         Works on <span class="os windows">Windows 10</span> and
@@ -155,8 +155,8 @@
       <h3>Window Controls</h3>
       <p>
         To close the program, or enter and exit fullscreen mode use the colored
-        controls in the settings panel. Red to close, yellow for windowed mode,
-        green for fullscreen. By default Lowkey Image Viewer opens in fullscreen
+        controls in the settings panel. Red to close, yellow to minimize,
+        green to toggle fullscreen mode. By default Lowkey Image Viewer opens in fullscreen
         mode.
       </p>
       <video
@@ -169,7 +169,7 @@
       <h3>Choosing a Control Mode</h3>
       <p>
         The control mode determines the method used to pan photos, and to flip
-        through folders in the directory.
+        through images in the directory.
       </p>
       <h4>
         Mouse and ScrollWheel Mode
@@ -373,7 +373,7 @@
         videos.
       </li>
       <li>
-        <a href="https://unsplash.com/">Beeple</a> used for samples in demo and
+        <a href="https://www.beeple-crap.com/">Beeple</a> used for samples in demo and
         tutorial videos.
       </li>
     </ul>
