update shuffle docs

--- a/index.html
+++ b/index.html
@@ -311,9 +311,8 @@
 
       <h3>Shuffle and Random Image</h3>
       <p>
-        Press the X key to shuffle images. In detail mode you will be show a
-        random image. In list view the list will not shuffle until you scroll
-        for the first time after pushing X button.
+        Press the X key to shuffle images. In detail mode you will be shown a
+        random image. In list view the list will be shuffled in place. Set a new sort order to go back to a normal sort.
       </p>
       <video
         src="./help_videos/shuffle.mp4"
