--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
         <a
           id="downloadButton"
           class="buyButton"
-          href="https://github.com/SteveCastle/loki/releases/download/v1.0.7/LowKey.Image.Viewer-1.0.7.dmg"
+          href="https://github.com/SteveCastle/loki/releases/download/v1.1.0/LowKey.Image.Viewer-1.1.0.dmg"
           >Download | Free</a
         >
       </p>
-      <p class="version">Version 1.0.8</p>
+      <p class="version">Version 1.1.0</p>
       <p class="license"><a href="https://github.com/SteveCastle/loki/blob/master/LICENSE"><img src="mit.svg"/></a></p>
       <p class="github"><a href="https://github.com/SteveCastle/loki"><img src="GitHub-Mark-Light-32px.png"/></a></p>
       <video src="./screencapture.mp4" loop autoplay muted controls></video>
@@ -384,10 +384,10 @@
       const el = document.getElementById('downloadButton')
       console.log('running thing', el);
       if(window.navigator.platform === 'MacIntel') {
-        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.0.8/LowKey.Image.Viewer-1.0.8.dmg')
+        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.1.0/LowKey.Image.Viewer-1.1.0.dmg')
         el.innerHTML  = "Download | Free for Mac"
       } else {
-        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.0.8/LowKey.Image.Viewer.Setup.1.0.8.exe')
+        el.setAttribute('href', 'hhttps://github.com/SteveCastle/loki/releases/download/v1.1.0/LowKey.Image.Viewer.Setup.1.1.0.exe.zip')
         el.innerHTML  = "Download | Free for Windows"
       }
 
