--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.1.0/LowKey.Image.Viewer-1.1.0.dmg')
         el.innerHTML  = "Download | Free for Mac"
       } else {
-        el.setAttribute('href', 'hhttps://github.com/SteveCastle/loki/releases/download/v1.1.0/LowKey.Image.Viewer.Setup.1.1.0.exe.zip')
+        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.1.0/LowKey.Image.Viewer.Setup.1.1.0.exe.zip')
         el.innerHTML  = "Download | Free for Windows"
       }
 
