--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./index.css" />
     <title>Lowkey Image and WebM Viewer</title>
-        <!-- Global site tag (gtag.js) - Google Ads: 666016632 -->
-        <script
-        async
-        src="https://www.googletagmanager.com/gtag/js?id=AW-666016632"
-      ></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          dataLayer.push(arguments);
-        }
-        gtag("js", new Date());
-  
-        gtag("config", "AW-666016632");
-        gtag("config", "UA-68258529-4");
-      </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 666016632 -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-666016632"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-666016632");
+      gtag("config", "UA-68258529-4");
+    </script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -51,16 +51,17 @@
         "offers": {
           "@type": "Offer",
           "price": "0"
-          }
+        }
       }
-      </script>
+    </script>
   </head>
   <body>
     <header>
       <img src="logo.png" class="logo" />
       <h1>Lowkey Image and WebM Viewer</h1>
       <p class="subTitle">
-        A free open source image viewer for viewing images and videos really well and nothing more.
+        A free open source image viewer for viewing images and videos really
+        well and nothing more.
       </p>
       <p class="info">
         Works on <span class="os windows">Windows 10</span> and
@@ -82,8 +83,16 @@
         >
       </p>
       <p class="version">Version 1.1.1</p>
-      <p class="license"><a href="https://github.com/SteveCastle/loki/blob/master/LICENSE"><img src="mit.svg"/></a></p>
-      <p class="github"><a href="https://github.com/SteveCastle/loki"><img src="GitHub-Mark-Light-32px.png"/></a></p>
+      <p class="license">
+        <a href="https://github.com/SteveCastle/loki/blob/master/LICENSE"
+          ><img src="mit.svg"
+        /></a>
+      </p>
+      <p class="github">
+        <a href="https://github.com/SteveCastle/loki"
+          ><img src="GitHub-Mark-Light-32px.png"
+        /></a>
+      </p>
       <video src="./screencapture.mp4" loop autoplay muted controls></video>
     </header>
     <main>
@@ -100,12 +109,19 @@
         <li>Simple Low Clutter UI</li>
         <li>No Wasted Space - Only your Images</li>
         <li>Folder Based Navigation and A Better List View Experience</li>
-        <li>Support for the most common Animated and Video File Types (mp4, gif, webm)</li>
-        <li>No Subscriptions, No Auto Update, No Connecting to the Internet for Any Reason</li>
+        <li>
+          Support for the most common Animated and Video File Types (mp4, gif,
+          webm)
+        </li>
+        <li>
+          No Subscriptions, No Auto Update, No Connecting to the Internet for
+          Any Reason
+        </li>
       </ul>
       <p>
         Lowkey Image Viewer also does not create any aditional photo database,
-        or connect to the internet. It uses your file system directly for images.
+        or connect to the internet. It uses your file system directly for
+        images.
       </p>
       <div class="divider" />
       <h2>Options and Settings</h2>
@@ -114,21 +130,11 @@
         it up for the way you prefer to browse images.
       </p>
       <ul>
-        <li>
-          Sort Order
-        </li>
-        <li>
-          File Filtering
-        </li>
-        <li>
-          Scaling Modes
-        </li>
-        <li>
-          Control Modes (Mouse or Trackpad Optimized)
-        </li>
-        <li>
-          Full Screen and Always on Top
-        </li>
+        <li>Sort Order</li>
+        <li>File Filtering</li>
+        <li>Scaling Modes</li>
+        <li>Control Modes (Mouse or Trackpad Optimized)</li>
+        <li>Full Screen and Always on Top</li>
       </ul>
       <p>
         See the help selection below for more information on changing settings.
@@ -151,196 +157,84 @@
         supported image type and open it using LowKey Image Viewer, which should
         be added to the list of available programs automatically.
       </p>
-      <video src="./help_videos//open.mp4" loop autoplay muted controls></video>
-      <h3>Window Controls</h3>
       <p>
-        To close the program, or enter and exit fullscreen mode use the colored
-        controls in the settings panel. Red to close, yellow to minimize,
-        green to toggle fullscreen mode. By default Lowkey Image Viewer opens in fullscreen
-        mode.
+        Once inside of lowkey image viewer you can change the image by opening
+        the control palette with (RIGHT-CLICK) and clicking on the current file
+        name.
       </p>
-      <video
-        src="./help_videos//window-controls.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
-      <h3>Choosing a Control Mode</h3>
+      <h3>Switch Between Directory List View and Image or Video Detail View</h3>
+      <h4>In Mouse and Scroll Wheel Mode</h4>
       <p>
-        The control mode determines the method used to pan photos, and to flip
-        through images in the directory.
+        Double click anywhere on the screen to open Directory List View, double
+        click on an image in list view to open that image.
       </p>
-      <h4>
-        Mouse and ScrollWheel Mode
-      </h4>
+      <h4>In Trackpad or Apple Magic Mouse Mode</h4>
       <p>
-        You flip through photos using the scroll wheel, and you pan photos by
-        clicking, holding, and dragging.
+        Move your mouse to the bottom left corner of the window. A folder icon
+        will appear, click the folder to switch to list view. To select an image
+        to view, double click the image.
       </p>
-      <h4>
-        Trackpad Mode
-      </h4>
+      <img src="/images/list-view.jpg" alt="List view demo" />
       <p>
-        You flip through photos by clicking to the right side of the image or on
-        the left side to flip backwards, and you pan photos by scrolling with
-        your trackpad or Magic Mouse.
+        In list view you can also click hold and drag the images to reposition
+        them inside the grid.
       </p>
-      <video
-        src="./help_videos//control_mode.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
+      <h3>Opening the Control Palette</h3>
+      <p>
+        The Control Palette is the only place to find menu options and settings
+        in LowKey Image Viewer. To open it, right click anywhere on the screen
+        at any time. Click outside of the menu to close it. You can also lock
+        the menu open by clicking on the lock icon in the top right.
+      </p>
+      <h3>Control Palette: FileSystem Tab</h3>
+      <p>
+        The file system tab allows you to see how many images are in the current
+        folder, and which image you are viewing. You can change directories, or
+        change the file here.
+      </p>
+      <img src="/images/file-system.jpg" alt="File system settings demo" />
 
-      <h3>View all images in current directory</h3>
+      <h3>Control Palette: Sorting and Filtering Tab</h3>
       <p>
-        Move your mouse to the bottom right corner of the screen. A folder icon
-        will appear, click on it to view all images in the current directory.
+        The Sorting and Filtering Tab allows you to change the sort order or
+        file type filtering settings being applied.
       </p>
-      <video src="./help_videos/list.mp4" loop autoplay muted controls></video>
-
-      <h3>Include files in subfolders with Recursive Mode</h3>
+      <img
+        src="/images/filters-and-sorting.jpg"
+        alt="Filter and sorting settings demo"
+      />
+      <h3>Control Palette: Image and Video Tab</h3>
       <p>
-        Open the settings panel by moving your mouse to the bottom left corner
-        of the screen. Click the settings gear icon to open settings. Click on
-        the recursive option to toggle the inclusion of images in
-        subdirectories. Recursive mode may take a while to load if there are
-        over 50,000 images.
+        The Image and Video Tab allows you to Change the Image scaling, and
+        video options.
       </p>
-      <video
-        src="./help_videos/recursive.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
-
-      <h3>Jump into subfolder while in recursive mode</h3>
+      <img src="/images/image-settings.jpg" alt="Image settings demo" />
+      <h3>Control Palette: Control Settings</h3>
       <p>
-        While in Detail View. Right click on an image while in Recursive mode
-        and if it is not in the root directory, your active directory will be
-        set to the directory containing the image.
+        The Control Settings tab lets you change the control style, and set the
+        hotkeys for any actions not found in other tabs.
+        <img src="/images/control-settings.jpg" alt="Control settings demo" />
       </p>
-      <video
-        src="./help_videos/folder-dive.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
-      <h3>Changing the active directory</h3>
-
+      <h3>Hot Keys</h3>
       <p>
-        Open the settings panel by moving your mouse to the bottom left corner
-        of the screen. Click the settings gear icon to open settings. Click on
-        the current folder name to display a file browser, change your path, and
-        select new path.
+        You can configure the hotkeys on any action inside the command Palette
+        if you see a key icon on the far left of the action button. Click the
+        button and you will be prompted to enter a new hotkey. If a hotkey
+        already exists on another action it will be removed and replaced.
       </p>
-      <video
-        src="./help_videos/change-directory.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
-
-      <h3>Change the image scale</h3>
+      <h3>Shuffle Images</h3>
       <p>
-        Open the settings panel by moving your mouse to the bottom left corner
-        of the screen. Click the settings gear icon to open settings. Click on
-        the current image scale to change image scaling method.
+        You can shuffle all of the current images in the folder, or if in
+        recursive mode, in the folder and subfolders. By default the shuffle
+        hotkey is X but you can change it in the Control settings tab.
       </p>
-      <p class="hotKey">Hotkey: C</p>
-      <video
-        src="./help_videos/scaling.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
-
-      <h3>Change sort order</h3>
-      <p>
-        Open the settings panel by moving your mouse to the bottom left corner
-        of the screen. Click the settings gear icon to open settings. Click on
-        the current sort order to toggle sort method. Currently only supports
-        last modified date, and alphabetical order.
-      </p>
-      <p class="hotKey">Hotkey: S</p>
-      <video src="./help_videos/sort.mp4" loop autoplay muted controls></video>
-
-      <h3>Change file type filter</h3>
-      <p>
-        Open the settings panel by moving your mouse to the bottom left corner
-        of the screen. Click the settings gear icon to open settings. Click on
-        the current sort order to flip through the file type filtering method.
-        Currently supports (All Files, Static Files, Gif Files, Video Files, and
-        Motion Files).
-      </p>
-      <p class="hotKey">
-        Hotkey: A(For All) S(For Static Only) G(For Gif) V(For Videos) M(For
-        Motion)
-      </p>
-      <video
-        src="./help_videos/filters.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
-
-      <h3>Save settings for next time</h3>
-      <video
-        src="./help_videos/save-settings.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
-
-      <h3>Control video files</h3>
-      <video
-        src="./help_videos/video-controls.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
-
-      <h3>Shuffle and Random Image</h3>
-      <p>
-        Press the X key to shuffle images. In detail mode you will be shown a
-        random image. In list view the list will be shuffled in place. Set a new sort order to go back to a normal sort.
-      </p>
-      <video
-        src="./help_videos/shuffle.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video>
-
-      <!-- <h3>Updating Lowkey Image Viewer</h3>
-      <p>
-        You can update the software from the About menu located in the settings
-        panel.
-      </p>
-      <video
-        src="./help_videos/update.mp4"
-        loop
-        autoplay
-        muted
-        controls
-      ></video> -->
-
       <div class="divider" />
       <h2 id="support">Support and Satisfaction Guarantee</h2>
       <p>
         Still have a problem not answered here? Send me an email and I'm happy
-        to help! There is also a separate email for feature requests. All development of Lowkey Image Viewer is driven by feature
-        requests from the community and updates are free forever.
+        to help! There is also a separate email for feature requests. All
+        development of Lowkey Image Viewer is driven by feature requests from
+        the community and updates are free forever.
       </p>
       <ul>
         <li>
@@ -353,7 +247,6 @@
             >Feature Requests: features@lowkeyviewer.com</a
           >
         </li>
-
       </ul>
       <div class="divider" />
 
@@ -362,33 +255,42 @@
         The following projects were used in the creation of Low Key Image
         Viewer. Thank you for making your work available for others to use.
       </p>
-      <ul></ul>
-      <li>
-        <a href="https://twemoji.twitter.com/">Twemoji</a> by Twitter via
-        CC-BY4.0
-      </li>
-      <li>
-        <a href="https://unsplash.com/">Unsplash</a> used for samples in demo
-        videos.
-      </li>
-      <li>
-        <a href="https://www.beeple-crap.com/">Beeple</a> used for samples in demo and
-        tutorial videos.
-      </li>
-    </ul>
+      <ul>
+        <li>
+          <a href="https://twemoji.twitter.com/">Twemoji</a> by Twitter via
+          CC-BY4.0
+        </li>
+        <li>
+          <a href="https://unsplash.com/">Unsplash</a> used for samples in demo
+          videos.
+        </li>
+        <li>
+          <a href="https://www.beeple-crap.com/">Beeple</a> used for samples in
+          demo and tutorial videos.
+        </li>
+      </ul>
     </main>
     <script>
       function trackDownload() {
-        gtag('event', 'click', {'event_category':'download','event_label': window.navigator.platform});
+        gtag("event", "click", {
+          event_category: "download",
+          event_label: window.navigator.platform,
+        });
       }
-      const el = document.getElementById('downloadButton')
-      console.log('running thing', el);
-      if(window.navigator.platform === 'MacIntel') {
-        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.1.1/LowKey.Image.Viewer-1.1.1.dmg')
-        el.innerHTML  = "Download | Free for Mac"
+      const el = document.getElementById("downloadButton");
+      console.log("running thing", el);
+      if (window.navigator.platform === "MacIntel") {
+        el.setAttribute(
+          "href",
+          "https://github.com/SteveCastle/loki/releases/download/v1.1.1/LowKey.Image.Viewer-1.1.1.dmg"
+        );
+        el.innerHTML = "Download | Free for Mac";
       } else {
-        el.setAttribute('href', 'https://github.com/SteveCastle/loki/releases/download/v1.1.1/LowKey.Image.Viewer.Setup.1.1.1.exe.zip')
-        el.innerHTML  = "Download | Free for Windows"
+        el.setAttribute(
+          "href",
+          "https://github.com/SteveCastle/loki/releases/download/v1.1.1/LowKey.Image.Viewer.Setup.1.1.1.exe.zip"
+        );
+        el.innerHTML = "Download | Free for Windows";
       }
 
       el.addEventListener("click", trackDownload, false);
