--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         will appear, click the folder to switch to list view. To select an image
         to view, double click the image.
       </p>
-      <img src="/images/list-view.jpg" alt="List view demo" />
+      <img class="fullsize" src="/images/list-view.jpg" alt="List view demo" />
       <p>
         In list view you can also click hold and drag the images to reposition
         them inside the grid.
@@ -192,7 +192,11 @@
         folder, and which image you are viewing. You can change directories, or
         change the file here.
       </p>
-      <img src="/images/file-system.jpg" alt="File system settings demo" />
+      <img
+        class="fullsize"
+        src="/images/file-system.jpg"
+        alt="File system settings demo"
+      />
 
       <h3>Control Palette: Sorting and Filtering Tab</h3>
       <p>
@@ -200,6 +204,7 @@
         file type filtering settings being applied.
       </p>
       <img
+        class="fullsize"
         src="/images/filters-and-sorting.jpg"
         alt="Filter and sorting settings demo"
       />
@@ -208,12 +213,20 @@
         The Image and Video Tab allows you to Change the Image scaling, and
         video options.
       </p>
-      <img src="/images/image-settings.jpg" alt="Image settings demo" />
+      <img
+        class="fullsize"
+        src="/images/image-settings.jpg"
+        alt="Image settings demo"
+      />
       <h3>Control Palette: Control Settings</h3>
       <p>
         The Control Settings tab lets you change the control style, and set the
         hotkeys for any actions not found in other tabs.
-        <img src="/images/control-settings.jpg" alt="Control settings demo" />
+        <img
+          class="fullsize"
+          src="/images/control-settings.jpg"
+          alt="Control settings demo"
+        />
       </p>
       <h3>Hot Keys</h3>
       <p>
