--- a/index.html
+++ b/index.html
@@ -188,9 +188,10 @@
       </p>
       <h3>Control Palette: FileSystem Tab</h3>
       <p>
-        The file system tab allows you to see how many images are in the current
+        The FileSystem Tab allows you to see how many images are in the current
         folder, and which image you are viewing. You can change directories, or
-        change the file here.
+        change the file here. You can also toggle whether or not the list of
+        images should recursively find files in nested folders.
       </p>
       <img
         class="fullsize"
@@ -220,7 +221,7 @@
       />
       <h3>Control Palette: Control Settings</h3>
       <p>
-        The Control Settings tab lets you change the control style, and set the
+        The Control Settings Tab lets you change the control style, and set the
         hotkeys for any actions not found in other tabs.
         <img
           class="fullsize"
@@ -231,8 +232,8 @@
       <h3>Hot Keys</h3>
       <p>
         You can configure the hotkeys on any action inside the command Palette
-        if you see a key icon on the far left of the action button. Click the
-        button and you will be prompted to enter a new hotkey. If a hotkey
+        if you see a key icon on the right hand side of the action button. Click
+        the button and you will be prompted to enter a new hotkey. If a hotkey
         already exists on another action it will be removed and replaced.
       </p>
       <h3>Shuffle Images</h3>
