--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </p>
       <p>
         Once inside of lowkey image viewer you can change the image by opening
-        the control palette with (RIGHT-CLICK) and clicking on the current file
+        the Command Palette with (RIGHT-CLICK) and clicking on the current file
         name.
       </p>
       <h3>Switch Between Directory List View and Image or Video Detail View</h3>
@@ -179,14 +179,14 @@
         In list view you can also click hold and drag the images to reposition
         them inside the grid.
       </p>
-      <h3>Opening the Control Palette</h3>
+      <h3>Opening the Command Palette</h3>
       <p>
-        The Control Palette is the only place to find menu options and settings
+        The Command Palette is the only place to find menu options and settings
         in LowKey Image Viewer. To open it, right click anywhere on the screen
         at any time. Click outside of the menu to close it. You can also lock
         the menu open by clicking on the lock icon in the top right.
       </p>
-      <h3>Control Palette: FileSystem Tab</h3>
+      <h3>Command Palette: FileSystem Tab</h3>
       <p>
         The FileSystem Tab allows you to see how many images are in the current
         folder, and which image you are viewing. You can change directories, or
@@ -199,7 +199,7 @@
         alt="File system settings demo"
       />
 
-      <h3>Control Palette: Sorting and Filtering Tab</h3>
+      <h3>Command Palette: Sorting and Filtering Tab</h3>
       <p>
         The Sorting and Filtering Tab allows you to change the sort order or
         file type filtering settings being applied.
@@ -209,7 +209,7 @@
         src="/images/filters-and-sorting.jpg"
         alt="Filter and sorting settings demo"
       />
-      <h3>Control Palette: Image and Video Tab</h3>
+      <h3>Command Palette: Image and Video Tab</h3>
       <p>
         The Image and Video Tab allows you to Change the Image scaling, and
         video options.
@@ -219,9 +219,9 @@
         src="/images/image-settings.jpg"
         alt="Image settings demo"
       />
-      <h3>Control Palette: Control Settings</h3>
+      <h3>Command Palette: Control Settings</h3>
       <p>
-        The Control Settings Tab lets you change the control style, and set the
+        The Cotrol Settings Tab lets you change the control style, and set the
         hotkeys for any actions not found in other tabs.
         <img
           class="fullsize"
@@ -231,7 +231,7 @@
       </p>
       <h3>Hot Keys</h3>
       <p>
-        You can configure the hotkeys on any action inside the command Palette
+        You can configure the hotkeys on any action inside the Command Palette
         if you see a key icon on the right hand side of the action button. Click
         the button and you will be prompted to enter a new hotkey. If a hotkey
         already exists on another action it will be removed and replaced.
