--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </head>
   <body>
     <header>
-      <img src="logo.png" class="logo" />
+      <img src="logo.png" class="logo" alt="Lowkey Image Viewer Logo" />
       <h1>Lowkey Image and WebM Viewer</h1>
       <p class="subTitle">
         A free open source image viewer for viewing images and videos really
@@ -82,7 +82,7 @@
           >Download | Free</a
         >
       </p>
-      <p class="version">Version 1.1.3</p>
+      <p class="version">Version 1.1.4</p>
       <p class="license">
         <a href="https://github.com/SteveCastle/loki/blob/master/LICENSE"
           ><img src="mit.svg"
@@ -296,13 +296,13 @@
       if (window.navigator.platform === "MacIntel") {
         el.setAttribute(
           "href",
-          "https://github.com/SteveCastle/loki/releases/download/v1.1.3/LowKey.Image.Viewer-1.1.3.dmg"
+          "https://github.com/SteveCastle/loki/releases/download/v1.1.4/LowKey.Image.Viewer-1.1.4.dmg"
         );
         el.innerHTML = "Download | Free for Mac";
       } else {
         el.setAttribute(
           "href",
-          "https://github.com/SteveCastle/loki/releases/download/v1.1.3/LowKey.Image.Viewer.Setup.1.1.3.exe.zip"
+          "https://github.com/SteveCastle/loki/releases/download/v1.1.4/LowKey.Image.Viewer.Setup.1.1.4.exe.zip"
         );
         el.innerHTML = "Download | Free for Windows";
       }
